feat: linked list bootstrap and insert fns

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,15 @@ set(CMAKE_C_STANDARD 23)
 
 add_subdirectory(dynamic_array)
 
+add_subdirectory(linked_list)
+
 add_subdirectory(ds_test_lib)
 
 add_executable(dsa main.c)
 
 target_link_libraries(dsa dynamic_array_lib)
+
+target_link_libraries(dsa linked_list_lib)
 
 target_link_libraries(dsa ds_test_lib)
 
